# kwazzup

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  kwazzup.kdev4  resources.qrc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
.kdev4/: kwazzup.kdev4
data/: kwazzup.kcfg  kwazzup.notifyrc  kwazzupui.rc  org.kde.kwazzup.appdata.xml  org.kde.kwazzup.desktop  org.kde.kwazzup.service  org.kde.kwazzup.service.in
src/: lockwidget.cpp  lockwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  notificationbridge.cpp  notificationbridge.h  settingsdialog.cpp  settingsdialog.h  traymanager.cpp  traymanager.h  utils.cpp  utils.h  webenginepage.cpp  webenginepage.h
